# static/docs/swagger.yaml
@@ -5,7 +5,7 @@ definitions:
       code:
         description: 验证码
         type: string
-      passwrod:
+      password:
         description: 密码
         type: string
       phone:
@@ -16,7 +16,7 @@ definitions:
         type: string
     required:
     - code
-    - passwrod
+    - password
     - phone
     - uuid
     type: object
@@ -65,6 +65,17 @@ info:
   title: OS Example API
   version: "1.0"
 paths:
+  /api/v1/setting:
+    get:
+      description: 获取JSON
+      responses:
+        "200":
+          description: '{"code": -1, "message": "添加失败"}'
+          schema:
+            type: string
+      summary: 查询系统信息
+      tags:
+      - 系统信息
   /v1/captcha:
     get:
       consumes:
@@ -78,6 +89,19 @@ paths:
           schema:
             type: string
       summary: 获取验证码
+      tags:
+      - Base
+  /v1/info:
+    get:
+      description: 获取用户信息
+      responses:
+        "200":
+          description: '{"code": 200, "data": [...]}'
+          schema:
+            type: string
+      security:
+      - Bearer: []
+      summary: 获取用户信息
       tags:
       - Base
   /v1/login:
@@ -164,7 +188,7 @@ paths:
       - Bearer: []
       summary: 获取Role数据
       tags:
-      - 角色/Role
+      - Base
 securityDefinitions:
   Bearer:
     in: header
